# agentic-sdlc-spec-kit

./: .dockerignore  .gitattributes  .gitignore  .implementation-notes.md  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .mcp.json  AGENTS.md  AI-EVALS-WORKPLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FORK.md  INSTALL.md  QUICKSTART.md  README.md  RELEASE.md  SUPPORT.md  TESTING.md  docker-compose.yml  pyproject.toml  roadmap.md  run_evaluators.py  session-ses_21cf.md  spec-driven.md  tasks_meta_structure.md  triage-framework.md
.devcontainer/: devcontainer.json  post-create.sh
.gemini/commands/: specify.toml
.github/: dependabot.yml  levelup.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  feature_request.yml  preset_submission.yml
.github/aw/: actions-lock.json
.github/workflows/: RELEASE-PROCESS.md  add-community-extension.lock.yml  add-community-extension.md  add-community-preset.lock.yml  add-community-preset.md  bug-assess.lock.yml  bug-assess.md  catalog-assign.yml  codeql.yml  docs.yml  eval.yml  lint.yml  publish-pypi.yml  release-trigger.yml  release.yml  stale.yml  test.yml
.gitlab/merge_request_templates/: default.md
.opencode/command/: adlc.architect.analyze.md  adlc.architect.implement.md  adlc.architect.init.md  adlc.architect.specify.md  adlc.architect.validate.md  adlc.evals.implement.md  adlc.evals.trace.md  adlc.evals.validate.md  adlc.levelup.clarify.md  adlc.levelup.init.md  adlc.levelup.skills.md  adlc.levelup.trace.md  adlc.product.clarify.md  adlc.product.implement.md  adlc.product.init.md  adlc.product.link.md  adlc.product.specify.md  adlc.product.validate.md  adlc.quick.implement.md  adlc.spec.analyze.md  adlc.spec.implement.md  adlc.spec.specify.md  adlc.tdd.plan.md  adlc.tdd.tasks.md  architect.clarify.md  evals.clarify.md  evals.init.md  evals.specify.md  levelup.implement.md  levelup.specify.md  levelup.validate.md  product.analyze.md  product.roadmap.md  spec.checklist.md  spec.clarify.md  spec.plan.md  spec.tasks.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  (+5 more)
.opencode/plans/: IMPLEMENTATION-README.md  example-skills.json  migrate-external-skills.py  roadmap-skills-package-manager-entry.md  skill-cli-commands-spec.md  skill-evaluation-framework.md  skill-integration-spec.md  skill_manager.py  skills-manifest-schema.json  skills-package-manager-concept.md
.roo/commands/: implement.md  levelup.md  plan.md  specify.md  tasks.md
.specify/: extensions.yml  init-options.json  integration.json
.specify/config/: config.json  gateway.env  mode.json  spec-sync-queue.json
.specify/drafts/: adr.md
.specify/extensions/: .registry  catalog.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry  catalog.json
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
changes/001-upstream-merge-0.12.14/: verify.md
changes/002-upstream-merge-0.12.15/: verify.md
changes/003-upstream-merge-0.12.15-adlc2/: verify.md
docs/: EDD_USAGE_GUIDE.md  README.md  architecture.md  discovery.md  docfx.json  index.md  installation.md  integrations.md  local-development.md  quickstart.md  toc.yml  triage-framework.md  upgrade.md  upgrading-spec-kit.md
docs/community/: extensions.md  friends.md  presets.md
docs/concepts/: sdd.md
docs/guides/: evolving-specs.md  monorepo.md
docs/install/: pipx.md
docs/reference/: authentication.md  bundles.md  core.md  integrations.md  overview.md  presets.md  workflows.md
evals/: EVAL.md  README.md  RUN_EVALUATORS.md  grader_mapping.json
evals/annotation-tool/: .sesskey  README.md  app.py
evals/configs/: promptfooconfig-arch.js  promptfooconfig-clarify.js  promptfooconfig-ext.js  promptfooconfig-hook.js  promptfooconfig-mission-brief.js  promptfooconfig-plan.js  promptfooconfig-quick-implement.js  promptfooconfig-spec.js  (+3 more)
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-EXTENSION-SYSTEM.md  catalog.community.json  catalog.example.json  catalog.json
integrations/: README.md  catalog.json
newsletters/: 2026-March.md
presets/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.community.json  catalog.json
scripts/: levelup.sh
templates/: AD-template-lean.md  AD-template.md  adr-template.md  agent-file-template.md  architecture-template.md  context-template.md  delegation-template.md  levelup-template.md  plan-template-build.md  plan-template.md  spec-template-build.md  spec-template.md  tasks-template.md  trace-template.md  vscode-settings.json
tests/: auth_helpers.py  bundler_helpers.py  conftest.py  test_agent_config_consistency.py  test_ai_skills.py  test_authentication.py  test_branch_numbering.py  test_bundled_extension_hooks.py  test_check_prerequisites_paths_only.py  test_check_prerequisites_risks.py  test_check_tool.py  test_cli_version.py  test_command_template_py_scripts.py  test_commands_package.py  test_console_imports.py  test_core_pack_scaffold.py  test_create_new_feature.py  test_cursor_frontmatter.py  test_docker_opencode.py  test_download_security.py  test_extension_skills.py  test_extension_update_hardening.py  test_extensions.py  test_fork_inventory.py  test_github_http.py  test_github_workflows.py  test_help_output.py  test_integrations.py  test_mode_evolution.py  test_prepare_levelup.py  test_presets.py  test_project_skills.py  test_quick_extension.py  test_registrar_path_traversal.py  test_security_graders.py  test_self_upgrade_detection.py  test_self_upgrade_execution.py  test_self_upgrade_guidance.py  test_self_upgrade_verification.py  test_setup_plan.py  (+16 more)
tmp/: adr-after-change-lower-score.md  adr-before-change-higher-score.md  architecture-after-change-lower-score.md  architecture-before-change-higher-score.md
workflows/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.community.json  catalog.json  feature-squad.yml
(+694 files in other folders)
